--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
           <span class="loader"></span>
         </div>
         <ul class="gallery"></ul>
+        <button class="seeMore">Load more</button>
+        <span class="loader"></span>
       </div>
     </main>
     <script type="module" src="./main.js"></script>
